Add standard deviation to the charts
HTMLReporter needs a new .js file

--- a/include/benchmark/filePath.h.in
+++ b/include/benchmark/filePath.h.in
@@ -1,2 +1,3 @@
 #cmakedefine JQUERY_PATH "@JQUERY_PATH@"
 #cmakedefine HIGHSTOCK_PATH "@HIGHSTOCK_PATH@"
+#cmakedefine HIGHSTOCK_MORE_PATH "@HIGHSTOCK_MORE_PATH@"
